--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LPM - Lua Package Manager</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <div class="container">
         <header>
             <h1>LPM</h1>
-            <p class="subtitle">Lua Package Manager - Manage your Lua packages with ease</p>
+            <p class="subtitle">Lua Package Manager - Complete CRUD Interface</p>
         </header>
 
         <div class="grid">
@@ -21,8 +21,8 @@
                 <div class="nav-item" data-view="packages" onclick="showView('packages')">
                     📦 Packages
                 </div>
-                <div class="nav-item" data-view="upload" onclick="showView('upload')">
-                    ⬆️ Upload
+                <div class="nav-item" data-view="create" onclick="showView('create')">
+                    ➕ Create
                 </div>
             </aside>
 
@@ -38,8 +38,8 @@
                     <div id="packageList"></div>
                 </div>
 
-                <div id="upload" class="view hidden">
-                    <h2>Upload Package</h2>
+                <div id="create" class="view hidden">
+                    <h2>Create/Upload Package</h2>
                     <form id="uploadForm">
                         <div class="form-group">
                             <label for="pkgName">Package Name</label>
@@ -57,10 +57,15 @@
                     </form>
                     <div id="uploadMsg"></div>
                 </div>
+
+                <div id="package-detail" class="view hidden">
+                    <h2 id="detail-title">Package Details</h2>
+                    <div id="package-detail-content"></div>
+                </div>
             </main>
         </div>
     </div>
 
-    <script src="app.js"></script>
+    <script src="scripts/app.js"></script>
 </body>
 </html>
